Fix: issue #1125 - wrapping text in Bible translation selection menu

--- a/css/main.css
+++ b/css/main.css
@@ -1903,6 +1903,14 @@ tr.compare-translation-row:nth-child(odd) {
   box-shadow: 5px 5px 5px #A0A0A0;
 }
 
+/* Fix wrapping text in Bible translation selection menu issue #1125 */
+.ui-selectmenu-status {
+  line-height: 1.4em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .scrollable::-webkit-scrollbar,
 .ui-selectmenu-menu ul::-webkit-scrollbar,
 .ui-widget-content::-webkit-scrollbar {
